Issue-505 adding uswds button styling to roles page to expand/collapse all accordions

--- a/_sass/uswds/components/_buttons.scss
+++ b/_sass/uswds/components/_buttons.scss
@@ -11,3 +11,8 @@
     border: 2px solid white;
   }
 }
+.expand-all-accordion {
+  .usa-button {
+    border: 1px solid black;
+  }
+}
